fixed header jumping

--- a/src/components/navbar/navbar.component.scss
+++ b/src/components/navbar/navbar.component.scss
@@ -202,6 +202,7 @@ $header-small-pc: '(min-width: 993px) and (max-width: 1744px)';
 
         .brand {
           width: 100%;
+          height: 35px;
 
           img {
             height: 35px;
@@ -275,6 +276,7 @@ $header-small-pc: '(min-width: 993px) and (max-width: 1744px)';
 
         .brand {
           width: 100%;
+          height: 35px;
 
           img {
             height: 30px;
@@ -348,6 +350,7 @@ $header-small-pc: '(min-width: 993px) and (max-width: 1744px)';
 
         .brand {
           width: 100%;
+          height: 35px;
 
           img {
             height: 35px;
